samples/_failures_safe/1761624329_424d91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_023f165f.c: In function ‘main’:
./samples/SAFE/__tmp_023f165f.c:159:5: error: expected expression at end of input
  159 |     process_text(&analyzer,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_023f165f.c:159:5: error: expected declaration or statement at end of input
